cmake_minimum_required(VERSION 3.14)
project(The_sword_refers_to_offer)

set(CMAKE_CXX_STANDARD 11)
#MESSAGE("info message ${PROJECT_SOURCE_DIR}")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

add_subdirectory(01_AssignmentOperator)
add_subdirectory(02_Singleton)
add_subdirectory(03_Duplicate_Numbers_in_an_array)
add_subdirectory(04_Lookup_of_two_dimensional_array)
add_subdirectory(05_replace_blank)
add_subdirectory(06_Print_from_the_tail_to_the_first)
add_subdirectory(07_Restore_Binary_Tree)
add_subdirectory(08_The_Next_Node_In_Binary_Tree)
add_subdirectory(09_Two_stack_implement_Queues)
add_subdirectory(10_Fibonacci_sequence)
add_subdirectory(11_Rotate_smallest_element_of_the_array)
add_subdirectory(12_Route_of_Matrix)
add_subdirectory(13_The_Range_of_Motion_of_The_Robot)
add_subdirectory(14_Rope_Reduction)
add_subdirectory(15_The_Number_Of_One_In_Binary)
add_subdirectory(16_Numerical_Integer_Power)
add_subdirectory(Sort_Algorithm)
