cmake_minimum_required(VERSION 3.14)
project(The_sword_refers_to_offer)

set(CMAKE_CXX_STANDARD 11)
#MESSAGE("info message ${PROJECT_SOURCE_DIR}")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

#add_subdirectory(01_AssignmentOperator)
#add_subdirectory(02_Singleton)
#add_subdirectory(03_Duplicate_Numbers_in_an_array)
#add_subdirectory(04_Lookup_of_two_dimensional_array)
#add_subdirectory(05_replace_blank)
#add_subdirectory(06_Print_from_the_tail_to_the_first)
#add_subdirectory(07_Restore_Binary_Tree)
#add_subdirectory(08_The_Next_Node_In_Binary_Tree)
#add_subdirectory(09_Two_stack_implement_Queues)
#add_subdirectory(10_Fibonacci_sequence)
#add_subdirectory(11_Rotate_smallest_element_of_the_array)
#add_subdirectory(12_Route_of_Matrix)
#add_subdirectory(13_The_Range_of_Motion_of_The_Robot)
#add_subdirectory(14_Rope_Reduction)
#add_subdirectory(15_The_Number_Of_One_In_Binary)
#add_subdirectory(16_Numerical_Integer_Power)
#add_subdirectory(17_Print_n_digits_from_1_to_maximum)
#add_subdirectory(18_Delete_list_node)
#add_subdirectory(19_Regex_Match)
#add_subdirectory(20_Character_String)
#add_subdirectory(21_ReorderArray)
#add_subdirectory(22_KthNodeFromEnd)
#add_subdirectory(23_EntryNodeInListLoop)
#add_subdirectory(24_ReverseList)
#add_subdirectory(25_MergeSortLists)
add_subdirectory(26_SubstructureInTree)
add_subdirectory(27_MirrorOfBinaryTree)
add_subdirectory(28_SymmetricalBinaryTree)
add_subdirectory(29_PrintMatrix)
add_subdirectory(30_MinInStack)
add_subdirectory(31_StackPushPopOrder)
add_subdirectory(32_PrintTreeFromTopToBottom)
add_subdirectory(33_SquenceOfBST)
add_subdirectory(34_PahtInTree)
add_subdirectory(35_CopyComplexList)
add_subdirectory(36_Binary_Search_Tree_To_List)
add_subdirectory(37_SerializeBinaryTree)
add_subdirectory(38_StringPermutation)
add_subdirectory(39_MoreThanHalfNumber)
add_subdirectory(40_KLeastNumbers)
add_subdirectory(41_StreamMedian)
add_subdirectory(42_GreatestSumOfSubarrays)
add_subdirectory(43_NumberOf1)
add_subdirectory(44_NumbersOfOneCentern)
add_subdirectory(45_SortArrayForMinNumber)
add_subdirectory(46_TranslateNumbersToStrings)
add_subdirectory(Sort_Algorithm)
